--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,6 @@
-<app-top-navbar></app-top-navbar>
+<div class="container">
+  <app-top-navbar></app-top-navbar>
+  <app-hero></app-hero>
+  <app-link-input></app-link-input>
+  <app-statistics></app-statistics>
+</div>
