--- a/src/app/hero/hero.component.html
+++ b/src/app/hero/hero.component.html
@@ -1,1 +1,20 @@
-<p>hero works!</p>
+<div class="hero">    
+    <div class="hero-left-side">
+        <div class="hero-title">
+            <h1>More then just shorter links</h1>
+        </div>
+        
+        <div class="hero-description">
+            <h3>Build your brand's recognition and get detailed insights on how your links are performing</h3>
+        </div>
+
+        <div class="hero-cta-button">
+            <a href="" class="rounded-button hero-button">Get Started</a>
+        </div>
+    </div>
+    <div class="hero-right-side">
+        <div class="hero-image">
+            <img src="assets/images/illustration-working.svg" alt="">
+        </div>
+    </div>
+</div>
