Added initial link input field and advanced statistics section [NOT RESPONSIVE]

--- a/src/app/link-input/link-input.component.html
+++ b/src/app/link-input/link-input.component.html
@@ -1,1 +1,5 @@
-<p>link-input works!</p>
+
+    <div class="link-input-container">
+        <input type="text" class="link-input-field" placeholder="Shorten a link here...">
+        <a class="rounded-corner-button">Shorten It!</a>
+    </div>
