--- a/src/app/top-navbar/top-navbar.component.html
+++ b/src/app/top-navbar/top-navbar.component.html
@@ -1,37 +1,39 @@
-<ul class="navbar">
-    <div class="navbar-left-side">
-        <li class="navbar-item">
-            <a class="navbar-link logo" href="">
-                <img src="assets/images/logo.svg" alt="">
-            </a>
-        </li>
-        <li class="navbar-item">
-            <a class="navbar-link" href="">
-                Features
-            </a>
-        </li>
-        <li class="navbar-item">
-            <a class="navbar-link" href="">
-                Pricing
-            </a>
-        </li>
-        <li class="navbar-item">
-            <a class="navbar-link" href="">
-                Resources
-            </a>
-        </li>
-    </div>
-
-    <div class="navbar-right-side">
-        <li class="navbar-item">
-            <a class="navbar-link" href="">
-                Login
-            </a>
-        </li>
-        <li class="navbar-item">
-            <a class="navbar-link rounded-button" href="">
-                Sign up
-            </a>
-        </li>
-    </div>
-</ul>
+<div class="container">
+    <ul class="navbar">
+        <div class="navbar-left-side">
+            <li class="navbar-item">
+                <a class="navbar-link logo" href="">
+                    <img src="assets/images/logo.svg" alt="">
+                </a>
+            </li>
+            <li class="navbar-item">
+                <a class="navbar-link" href="">
+                    Features
+                </a>
+            </li>
+            <li class="navbar-item">
+                <a class="navbar-link" href="">
+                    Pricing
+                </a>
+            </li>
+            <li class="navbar-item">
+                <a class="navbar-link" href="">
+                    Resources
+                </a>
+            </li>
+        </div>
+    
+        <div class="navbar-right-side">
+            <li class="navbar-item">
+                <a class="navbar-link" href="">
+                    Login
+                </a>
+            </li>
+            <li class="navbar-item">
+                <a class="navbar-link rounded-button" href="">
+                    Sign up
+                </a>
+            </li>
+        </div>
+    </ul>
+</div>
