--- a/src/app/hero/hero.component.scss
+++ b/src/app/hero/hero.component.scss
@@ -1,3 +1,7 @@
+.container{
+    margin-bottom: 0;
+}
+
 .hero{
     margin-top: 130px;
     display: flex;
@@ -33,7 +37,7 @@
 
         .hero-button{
             text-decoration: none;
-            font-size: 20px;
+            font-size: 18px;
             font-weight: 500;
             letter-spacing: 0.5px;
             padding: 13px 25px;
@@ -48,6 +52,6 @@
 
 .hero-image{
     img{
-        width: 800px;
+        width: 700px;
     }    
 }
