--- a/src/app/statistics/statistics.component.html
+++ b/src/app/statistics/statistics.component.html
@@ -1,1 +1,54 @@
-<p>statistics works!</p>
+<div class="stats-container">
+    <div class="container">
+        <div class="stats-headline-conntainer">
+            <div class="stats-title">
+                <h1>
+                    Advanced Statistics
+                </h1>
+            </div>
+            <div class="stats-description">
+                <p>
+                    Track how your links are performing across the web with our advanced statistics dashboard.
+                </p>
+            </div>
+        </div>
+        <div class="stats-cards">
+            <div class="stats-card">
+                <div class="stats-card-icon">
+                    <img src="assets/images/icon-brand-recognition.svg" alt="">
+                </div>
+                <div class="stats-card-title">
+                    <h3>Brand Recognition</h3>
+                </div>
+                <div class="stats-card-description">
+                    Boost your brand recognition with each click. Generic links don't mean a thing. Branded links help instil 
+                    confidence in your content.
+                </div>
+            </div>
+            <div class="stats-card">
+                <div class="stats-card-icon">
+                    <img src="assets/images/icon-detailed-records.svg" alt="">
+                </div>
+                <div class="stats-card-title">
+                    <h3>Detailed Records</h3>
+                </div>
+                <div class="stats-card-description">
+                    Gain insights into who is clicking your links. Knowing when and where people engage with your content helps
+                    inform better decisions.
+                </div>
+            </div>
+            <div class="stats-card">
+                <div class="stats-card-icon">
+                    <img src="assets/images/icon-fully-customizable.svg" alt="">
+                </div>
+                <div class="stats-card-title">
+                    <h3>Fully Customizable</h3>
+                </div>
+                <div class="stats-card-description">
+                    Improve brand awareness and content discoverability through customizable links, supercharging audience engagement.
+                </div>
+            </div>
+        </div>
+
+    </div>
+</div>
