--- a/src/buttons.scss
+++ b/src/buttons.scss
@@ -4,3 +4,13 @@
     padding: 10px 20px;
     border-radius: 30px;
 }
+
+.rounded-corner-button{
+    background-color: hsl(180, 66%, 49%);
+    color: white;
+    padding: 15px 30px;
+    border-radius: 10px;
+    font-size: 16px;
+    font-weight: 500;
+    letter-spacing: 0.5px;
+}
