Finished statistics section,  desktop version [NOT RESPONSIVE]

--- a/src/app/statistics/statistics.component.html
+++ b/src/app/statistics/statistics.component.html
@@ -25,6 +25,7 @@
                     confidence in your content.
                 </div>
             </div>
+            <div class="card-connecting-line"></div>
             <div class="stats-card">
                 <div class="stats-card-icon">
                     <img src="assets/images/icon-detailed-records.svg" alt="">
@@ -37,6 +38,7 @@
                     inform better decisions.
                 </div>
             </div>
+            <div class="card-connecting-line"></div>
             <div class="stats-card">
                 <div class="stats-card-icon">
                     <img src="assets/images/icon-fully-customizable.svg" alt="">
