Added cta section and footer [NOT RESPONSIVE]

--- a/src/app/cta-section/cta-section.component.html
+++ b/src/app/cta-section/cta-section.component.html
@@ -1,1 +1,4 @@
-<p>cta-section works!</p>
+<div class="cta-container">
+    <h1 class="cta-title">Boost your links today</h1>
+    <a class="cta-button rounded-button" href="">Get Started</a>
+</div>
