--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,1 +1,36 @@
-<p>footer works!</p>
+<div class="footer-container">
+    <div class="container">
+        <div class="footer-links">
+            <div class="footer-logo-section">
+                <img class="footer-link-header" src="assets/images/logo.svg" alt="">
+            </div>
+            <div class="footer-links-section">
+                <div class="footer-link-section">
+                    <a class="footer-link-header" href="">Features</a>
+                    <a class="footer-link" href="">Link Shortening</a>
+                    <a class="footer-link" href="">Branded Links</a>
+                    <a class="footer-link" href="">Analytics</a>
+                </div>
+                <div class="footer-link-section">
+                    <a class="footer-link-header" href="">Resources</a>
+                    <a class="footer-link" href="">Blog</a>
+                    <a class="footer-link" href="">Developers</a>
+                    <a class="footer-link" href="">Support</a>
+                </div> 
+                <div class="footer-link-section">
+                    <a class="footer-link-header" href="">Company</a>
+                    <a class="footer-link" href="">About</a>
+                    <a class="footer-link" href="">Our Team</a>
+                    <a class="footer-link" href="">Careers</a>
+                    <a class="footer-link" href="">Contact</a>
+                </div>
+                <div class="footer-social-media-section">
+                    <a href="https://www.facebook.com" target="_blank"><img src="assets/images/icon-facebook.svg" alt=""></a>
+                    <a href="https://www.twitter.com" target="_blank"><img src="assets/images/icon-twitter.svg" alt=""></a>
+                    <a href="https://www.pinterest.com" target="_blank"><img src="assets/images/icon-pinterest.svg" alt=""></a>
+                    <a href="https://www.instagram.com" target="_blank"><img src="assets/images/icon-instagram.svg" alt=""></a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
