--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,3 +2,5 @@
 <app-hero></app-hero>
 <app-link-input></app-link-input>
 <app-statistics></app-statistics>
+<app-cta-section></app-cta-section>
+<app-footer></app-footer>
