--- a/src/app/link-input/link-input.component.html
+++ b/src/app/link-input/link-input.component.html
@@ -1,5 +1,5 @@
 
     <div class="link-input-container">
         <input type="text" class="link-input-field" placeholder="Shorten a link here...">
-        <a class="rounded-corner-button">Shorten It!</a>
+        <a class="rounded-corner-button" href="">Shorten It!</a>
     </div>
