--- a/src/buttons.scss
+++ b/src/buttons.scss
@@ -3,6 +3,7 @@
     color: white !important;
     padding: 10px 20px;
     border-radius: 30px;
+    text-decoration: none;
 }
 
 .rounded-corner-button{
@@ -13,4 +14,5 @@
     font-size: 16px;
     font-weight: 500;
     letter-spacing: 0.5px;
+    text-decoration: none;
 }
