--- a/src/app/hero/hero.component.html
+++ b/src/app/hero/hero.component.html
@@ -6,7 +6,7 @@
             </div>
             
             <div class="hero-description">
-                <h3>Build your brand's recognition and get detailed insights on how your links are performing</h3>
+                <h3>Build your brand's recognition and get detailed insights on how your links are performing.</h3>
             </div>
     
             <div class="hero-cta-button">
