--- a/src/app/hero/hero.component.scss
+++ b/src/app/hero/hero.component.scss
@@ -55,3 +55,43 @@
         width: 700px;
     }    
 }
+
+@media screen and (max-width: 450px){
+    .hero{
+        flex-direction: column-reverse;
+        margin-top: 0px;
+        align-items: center;
+    }
+
+    .hero-image{
+        img{
+            width: 500px;
+        }
+    }
+
+    .hero-left-side{
+        align-items: center;
+    }
+    
+    .hero-title{
+        h1{
+            font-size: 40px !important;
+            line-height: 50px !important;
+            font-weight: 600;
+        }
+        text-align: center;
+    }
+
+    .hero-description{
+        h3{
+            font-size: 18px;
+            line-height: 30px;
+        }
+        text-align: center;
+        margin-top: 10px;
+    }
+}
+
+@media screen and (max-width: 1050px){
+    
+}
