--- a/src/app/link-input/link-input.component.scss
+++ b/src/app/link-input/link-input.component.scss
@@ -3,7 +3,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    top: 90px;
+    top: 110px;
 
     background-color: hsl(257, 27%, 26%);
     background-image: url('/src/assets/images/bg-shorten-desktop.svg');
@@ -15,9 +15,7 @@
     height: 170px;
     border-radius: 10px;
     gap: 20px;
-
-    margin: 0px 100px;
-
+    padding: 0px 30px;
 }
 
 .link-input-field{
@@ -26,5 +24,20 @@
     border-radius: 10px;
     border: none;
     width: 70%;
-    
+}
+
+@media screen and (max-width: 450px){
+    .link-input-container{
+        flex-direction: column;
+
+        .rounded-corner-button{
+            width: 90%;
+            text-align: center;
+        }
+    }
+
+    .link-input-field{
+        width: 90%;
+    }
+
 }
