--- a/src/app/top-navbar/top-navbar.component.html
+++ b/src/app/top-navbar/top-navbar.component.html
@@ -35,5 +35,16 @@
                 </a>
             </li>
         </div>
+        <div class="icon mobile-navbar-hamburger" (click)="openHamburgerMenu()">
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
     </ul>
 </div>
