--- a/src/app/top-navbar/top-navbar.component.scss
+++ b/src/app/top-navbar/top-navbar.component.scss
@@ -35,3 +35,113 @@
     margin-left: -25px;
 }
 
+
+.icon{
+    margin: 20px;
+}
+
+.mobile-navbar-hamburger{
+    width: 30px;
+    height: 30px;
+    position: relative;
+    transition: .1s;
+    margin: 10px 10px;
+    cursor: pointer;
+    display: inline-block;
+  }
+  .mobile-navbar-hamburger span{
+    width: 5px;
+    height: 5px;
+    background-color: black;
+    display: block;
+    border-radius: 50%;
+    position: absolute;
+  
+  }
+  .mobile-navbar-hamburger span:nth-child(1){
+    left: 0;
+    top: 0;
+  }
+  .mobile-navbar-hamburger span:nth-child(2){
+    left: 12px;
+    top: 0;
+  }
+  .mobile-navbar-hamburger span:nth-child(3){
+    right: 0;
+    top: 0;
+  }
+  .mobile-navbar-hamburger span:nth-child(4){
+    left: 0;
+    top: 12px;
+  }
+  .mobile-navbar-hamburger span:nth-child(5){
+    position: absolute;
+    left: 12px;
+    top: 12px;
+  }
+  .mobile-navbar-hamburger span:nth-child(6){
+    right: 0px;
+    top: 12px;
+  }
+  .mobile-navbar-hamburger span:nth-child(7){
+    left: 0px;
+    bottom: 0px;
+  }
+  .mobile-navbar-hamburger span:nth-child(8){
+    position: absolute;
+    left: 12px;
+    bottom: 0px;
+  }
+  .mobile-navbar-hamburger span:nth-child(9){
+    right: 0px;
+    bottom: 0px;
+  }
+  .mobile-navbar-hamburger.open{
+    transform: rotate(180deg);
+    cursor: pointer;
+    transition: .2s cubic-bezier(.8, .5, .2, 1.4);
+  }
+  .mobile-navbar-hamburger.open span{
+    border-radius: 50%;
+    transition-delay: 200ms;
+    transition: .5s cubic-bezier(.8, .5, .2, 1.4);
+  }
+  .mobile-navbar-hamburger.open span:nth-child(2) {
+    left: 6px;
+    top: 6px;
+  }
+  .mobile-navbar-hamburger.open span:nth-child(4) {
+    left: 6px;
+    top: 18px;
+  }
+  .mobile-navbar-hamburger.open span:nth-child(6) {
+    right: 6px;
+    top: 6px;
+  }
+  .mobile-navbar-hamburger.open span:nth-child(8) {
+    left: 18px;
+    bottom: 6px;
+  }
+
+  @media screen and (max-width: 1050px){
+    .navbar-right-side{
+        display: none;
+    }
+    .navbar-item:nth-child(2){
+        display: none;
+    }
+    .navbar-item:nth-child(3){
+        display: none;
+    }
+    .navbar-item:nth-child(4){
+        display: none;
+    }
+
+    
+  }
+
+  @media screen and(min-width: 1050px){
+      .mobile-navbar-hamburger{
+          display: none;
+      }
+  }
