Added mobile navbar, appears when clicking on hamburger icon

--- a/src/app/top-navbar/top-navbar.component.html
+++ b/src/app/top-navbar/top-navbar.component.html
@@ -45,6 +45,34 @@
             <span></span>
             <span></span>
             <span></span>
+
+            <ul class="mobile-menu">
+                <li class="mobile-navbar-item">
+                    <a class="navbar-link" href="">
+                        Features
+                    </a>
+                </li>
+                <li class="mobile-navbar-item">
+                    <a class="navbar-link" href="">
+                        Pricing
+                    </a>
+                </li>
+                <li class="mobile-navbar-item">
+                    <a class="navbar-link" href="">
+                        Resources
+                    </a>
+                </li>
+                <li class="mobile-navbar-item">
+                    <a class="navbar-link" href="">
+                        Login
+                    </a>
+                </li>
+                <li class="mobile-navbar-item">
+                    <a class="navbar-link rounded-button" href="">
+                        Sign up
+                    </a>
+                </li>
+            </ul>
         </div>
     </ul>
 </div>
