Added responsivity in different sections.

--- a/src/app/statistics/statistics.component.html
+++ b/src/app/statistics/statistics.component.html
@@ -1,4 +1,5 @@
 <div class="stats-container">
+    <app-link-input></app-link-input>
     <div class="container">
         <div class="stats-headline-conntainer">
             <div class="stats-title">
