--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -43,19 +43,21 @@
     gap: 15px;
 }
 
-@media screen and (max-width: 450px){
+@media screen and (max-width: 1050px){
     .footer-container{
         padding-top: 50px;
     }
     .footer-links{
         flex-direction: column;
         align-items: center;
+
     }
     .footer-links-section{
         flex-direction: column;
         align-items: center;
 
-        margin-top: 40px;
+        margin-top: 30px;
+        gap: 50px;
     }
 
     .footer-link-section{
@@ -63,10 +65,14 @@
     }
 
     .footer-link{
-        margin-top: 5px;
+        margin-top: 0px;
     }
 
     .footer-social-media-section{
         gap: 25px;
     }
+}
+
+@media screen and (max-width: 450px) {
+    
 }
