--- a/src/buttons.scss
+++ b/src/buttons.scss
@@ -4,6 +4,7 @@
     padding: 10px 20px;
     border-radius: 30px;
     text-decoration: none;
+    cursor: pointer;
 }
 
 .rounded-corner-button{
@@ -15,4 +16,6 @@
     font-weight: 500;
     letter-spacing: 0.5px;
     text-decoration: none;
+    cursor: pointer;
+    border-width: 0px;
 }
