Fix design of mobile navbar [NOT FINISHED]

--- a/src/app/top-navbar/top-navbar.component.html
+++ b/src/app/top-navbar/top-navbar.component.html
@@ -62,6 +62,9 @@
                         Resources
                     </a>
                 </li>
+
+                <div class="dividing-line"></div>
+
                 <li class="mobile-navbar-item">
                     <a class="navbar-link" href="">
                         Login
