--- a/src/app/top-navbar/top-navbar.component.scss
+++ b/src/app/top-navbar/top-navbar.component.scss
@@ -98,30 +98,44 @@
   .mobile-navbar-hamburger.open{
     cursor: pointer;
     .mobile-menu{
-        background-color: hsla(257, 27%, 26%, .8);
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        gap: 10px;
-        top: -10px;
-        right: 50px;
-        position: absolute;
-        padding: 10px 10px;
-        border-radius: 5px;
-        
-      }
+      background-color: hsla(257, 27%, 26%);
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 10px;
+      position: absolute;
+      top: 60px;
+      right: 0px;
+      margin-right: auto;
+      margin-left: auto;
+      padding: 20px 30px;
+      border-radius: 5px;
+      width: 80vw;
+      font-weight: 500;
+    }
     
-      .mobile-navbar-item{
-          list-style-type: none;
-          a{
-              color: whitesmoke;
-              font-weight: 400;
-          }
-          .rounded-button{
-            padding: 5px 10px;
-            border-radius: 5px;
-          }
-          border-bottom: dotted white 1px;
+    .mobile-navbar-item{
+        list-style-type: none;
+        a{
+            color: whitesmoke;
+            font-weight: 400;
+        }
+        .rounded-button{
+          display: inline-block;
+          text-align: center;
+          width: 70vw !important;
+        }  
+    }
+      .dividing-line{
+        display: inline-block;
+        background-color: whitesmoke;
+        height: 0.1px;
+        opacity: 0.3;
+        width: 80vw;
+      }
+
+      .mobile-navbar-item:nth-child(4){
+        margin-top: 30px;
       }
     
     
