Adjustment to top-navbar

--- a/src/app/top-navbar/top-navbar.component.scss
+++ b/src/app/top-navbar/top-navbar.component.scss
@@ -105,9 +105,10 @@
       gap: 10px;
       position: absolute;
       top: 60px;
-      right: 0px;
-      margin-right: auto;
-      margin-left: auto;
+      
+      right: -20px;
+      margin-right: 10vw;
+      margin-left: 10vw;
       padding: 20px 30px;
       border-radius: 5px;
       width: 80vw;
